Fixing alignment of section4 and section7

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ section, footer {
   margin-left: 100px;
   margin-top: 40px;
   font-size: 40px;
-  margin-bottom: 100px;
+  padding-bottom: 75px;
 }
 
 #section3 ul {
@@ -246,6 +246,7 @@ section, footer {
   margin-bottom: 200px;
   margin-right: 30px;
   margin-left: 30px;
+  padding-bottom: 100px;
 }
 
 .column {
@@ -397,8 +398,9 @@ section, footer {
   display: none;
   overflow: hidden;
   color: black;
-  padding-left: 100px;
+  /* padding-left: 100px; */
   padding-bottom: 20px;
+  padding-top: 50px;
 }
 
 .panel h2 {
@@ -406,48 +408,52 @@ section, footer {
   font-size: 23px;
   padding-bottom: 20px;
   padding-top: 20px;
+  text-align: center;
 
 }
 
 .panel a {
   font-size: 20px;
   text-decoration: none;
+  text-align: center;
 
 }
 
-.panel ul li:hover {
+.panel a:hover {
   color: orange;
 }
 
 
-.panel ul li {
+.panel a {
   list-style: none;
-  color: black;
+  color: rgb(46, 34, 34);
   /* margin-left: 100px; */
   margin-bottom: 30px;
   /* padding-right: 10px;
   padding-left: 10px;
   margin-bottom: 5px; */
 }
-.panel ul li::before {
- color: black;
+/* .panel a::before { */
+ /* color: black; */
  /* color of bullet or square */
- content: "\2022";
+ /* content: "\2022"; */
  /* Unicode of character to precede the list item */
 
- font-size: 25px;
+ /* font-size: 25px; */
  /* em or %*/
 
- margin-left: 200px;
-
- top: .075em;
+ /* margin-left: 200px; */
+/* 
+ top: .075em; */
  /* use em or % */
 /* margin-right: 10px; */
-}
+/* } */
 
 .panel p {
   font-size: 23px;
   margin-bottom: 40px;
+  margin-top: 40px;
+  text-align: center;
 }
 .status {
   font-size: 100px;
@@ -495,6 +501,7 @@ padding-top: 75px;
  font-size: 20px;
  font-weight: 800;
  transition: 0.4s;
+ padding-bottom: 25px;
 }
 
 /*this doesnt seem to apply */
@@ -610,6 +617,7 @@ padding-top: 75px;
 .panelBring ul {
   margin-left: 120px;
   margin-top: 20px;
+  padding-bottom: 55px;
 }
 
 #section9 {
@@ -635,6 +643,7 @@ padding-top: 75px;
 
 .sources {
   display: none;
+  padding-bottom: 100px;
 }
 
 .sources h3 {
